# Snake

./: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
src/: CMakeLists.txt  field.h  main.cpp  snake.h
src/client/: client.cpp  client.h
src/logic/: configurations.h  field.h  game.h  snake.h  transformator.h  validator.h
src/logic/components/: abstract_object.h  field.h  meal.h  object_builder.h  object_manager.h  snake.h  snake_builder.h  validator.h
src/server/: server.cpp  server.h
src/settings/: configurates.h  field.h  game.h  meal.h  snake.h
src/utility/: joinable_thread.h  one_dimensional_vector.h
src/view/: CMakeLists.txt
src/view/lib/: CMakeLists.txt
src/view/lib/glad/include/glad/: gl.h
src/view/lib/glad/src/: gl.c
src/view/window/: abstract_window.h  adapter.h  interpreter.h  observer.h  types.h  window.h  windows_fabric.h
tests/: logic_test.cpp
